[tool.poetry]
name = "nacl"
version = "0.2.0"
description = "Command line tool for querying Naemon configuration files."
license = "MIT"
authors = ["Petter Nyström"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.1"
simpleeval = "^0.9.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
flake8 = "^3.9.2"

[tool.poetry.scripts]
nacl = 'nacl.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
